(Backend): Add Implementation for getting all Stumbling Blocks
